@@ -3,6 +3,7 @@ changelog
         - Fixing message moduleload() windows system
         - renameStep accepts the same name
         - dependency replacement method accepts NA
+        - SYSargsList accepts `targets = SE` object
         
     version 2.1.10
         - management and compute running option names
